modificação no próprio github

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Meu primeiro repositório no github</h1>
     <p>esta edição foi feita no Visual Studio Code (experiencia boa!!!)</p>
+    <p>Maravilha na tecnologia </>
 </body>
 </html>
